--- a/src/librustdoc/html/static/main.css
+++ b/src/librustdoc/html/static/main.css
@@ -82,7 +82,7 @@ h1.fqn {
 }
 
 h2, h3, h4 { border-bottom: 1px dashed #eee; }
-h2 code, h3 code, h4 code { font-size: 1.3rem; }
+h2 code, h3 code, h4 code { font-size: 1.8rem; }
 
 code, pre { 
     font-family: "Inconsolata", Menlo, Monaco, Consolas, "DejaVu Sans Mono", monospace;
@@ -122,8 +122,9 @@ nav.sub {
     font-size: 17px;
     font-size: 1.6rem;
     margin: 30px 0 20px 0;
-    background: #e1e1e1;
+    background: #F5F5F5;
     text-align: center;
+    border-radius: 5px;
     color: #333;
 }
 
@@ -202,8 +203,9 @@ nav.sub {
 }
 
 .docblock h1 { font-size: 2.5rem; }
-.docblock h2 { font-size: 1.15rem; }
-.docblock h3, .docblock h4, .docblock h5 { font-size: 1rem; }
+.docblock h2 { font-size: 2rem; }
+.docblock h3 { font-size: 1.8rem; }
+.docblock h4, .docblock h5 { font-size: 1.4rem; }
 
 .content .source { 
     font-weight: 500;
