--- a/src/librustdoc/html/static/themes/ayu.css
+++ b/src/librustdoc/html/static/themes/ayu.css
@@ -225,7 +225,7 @@ a {
 }
 
 .collapse-toggle,
-details.rustdoc-toggle > summary.hideme > span,
+details.rustdoc-toggle > summary.hide-me > span,
 details.rustdoc-toggle > summary::before {
 	color: #999;
 }
