--- a/src/librustdoc/html/static/themes/dark.css
+++ b/src/librustdoc/html/static/themes/dark.css
@@ -187,7 +187,7 @@ a.test-arrow {
 }
 
 .collapse-toggle,
-details.rustdoc-toggle > summary.hideme > span,
+details.rustdoc-toggle > summary.hide-me > span,
 details.rustdoc-toggle > summary::before {
 	color: #999;
 }
