--- a/src/librustdoc/html/static/themes/light.css
+++ b/src/librustdoc/html/static/themes/light.css
@@ -185,7 +185,7 @@ a.test-arrow {
 }
 
 .collapse-toggle,
-details.rustdoc-toggle > summary.hideme > span,
+details.rustdoc-toggle > summary.hide-me > span,
 details.rustdoc-toggle > summary::before {
 	color: #999;
 }
