--- a/src/librustdoc/html/static/rustdoc.css
+++ b/src/librustdoc/html/static/rustdoc.css
@@ -1362,6 +1362,10 @@ details.rustdoc-toggle > summary.hide-me {
 	cursor: pointer;
 }
 
+details.rustdoc-toggle > summary::marker {
+	display: none;
+}
+
 details.rustdoc-toggle > summary::-webkit-details-marker {
 	display: none;
 }
