--- a/src/librustdoc/html/static/css/rustdoc.css
+++ b/src/librustdoc/html/static/css/rustdoc.css
@@ -1536,6 +1536,7 @@ details.dir-entry a {
 	https://developer.mozilla.org/en-US/docs/Web/CSS/contain */
 details.rustdoc-toggle {
 	contain: layout;
+	position: relative;
 }
 
 /* The hideme class is used on summary tags that contain a span with
@@ -1627,10 +1628,6 @@ details.rustdoc-toggle > summary:not(.hideme)::before {
 	on the parent <details> to make this work properly. */
 details.rustdoc-toggle[open] > summary.hideme {
 	position: absolute;
-}
-
-details.rustdoc-toggle {
-	position: relative;
 }
 
 details.rustdoc-toggle[open] > summary.hideme > span {
@@ -1993,10 +1990,7 @@ in storage.js
 	margin-bottom: 0.75em;
 }
 
-.method-toggle[open]:not(:last-child) {
-	margin-bottom: 2em;
-}
-
+.method-toggle[open]:not(:last-child),
 .implementors-toggle[open]:not(:last-child) {
 	margin-bottom: 2em;
 }
