--- a/src/librustdoc/html/static/css/rustdoc.css
+++ b/src/librustdoc/html/static/css/rustdoc.css
@@ -1586,8 +1586,9 @@ details.rustdoc-toggle > summary:hover::before {
 }
 
 details.rustdoc-toggle > summary:focus-visible::before {
-	/* The SVG is black, and gets turned white using a filter.
+	/* The SVG is black, and gets turned white using a filter in the dark themes.
 	   Do the same with the outline.
+	   The dotted 1px style is copied from Firefox's focus ring style.
 	*/
 	outline: 1px dotted #000;
 	outline-offset: 1px;
