--- a/src/librustdoc/html/static/css/rustdoc.css
+++ b/src/librustdoc/html/static/css/rustdoc.css
@@ -1331,6 +1331,10 @@ h3.variant {
 	display: none;
 }
 
+.search-failed a {
+	color: var(--search-failed-link-color);
+}
+
 .search-failed.active {
 	display: block;
 }
